--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <a href="#inicio">Inicio</a>
                     <a href="#sobremi">Sobre mí</a>
                     <a href="#habilidades">Habilidades</a>
+                    <a href="#resumen">Resumen</a>
                     <a href="#contacto">Contacto</a>
                 </nav>
                 <div class="logo">
